# 新增列表筛选 与 table二次封装 组件文档。

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vitepress-theme-demoblock": "^1.4.1"
   },
   "dependencies": {
-    "@types/node": "^16.11.7"
+    "@types/node": "^16.11.7",
+    "vue2-elementui-extend": "^1.0.9-beta4"
   }
 }
