--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
+  "name": "vuepress-starter",
+  "version": "0.0.1",
+  "main": "index.js",
+  "license": "MIT",
+  "author": "zhongzhiguo/a513476726@qq.com",
   "scripts": {
-    "dev": "vitepress dev docs",
-    "build": "vitepress build docs",
-    "serve": "vitepress serve docs",
-    "register:components": "vitepress-rc"
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue-jsx": "^1.2.0",
-    "vitepress": "^0.20.1",
-    "vitepress-theme-demoblock": "^1.4.1"
+    "@snippetors/vuepress-plugin-code-copy": "^1.1.3",
+    "@vuepress/plugin-active-header-links": "^1.9.7",
+    "@vuepress/plugin-back-to-top": "^1.9.7",
+    "vuepress": "^1.9.7",
+    "vuepress-plugin-code-copy": "^1.0.6"
   },
   "dependencies": {
-    "@types/node": "^16.11.7",
-    "vue2-elementui-extend": "^1.0.9-beta4"
+    "element-ui": "^2.15.6",
+    "vue2-elementui-extend": "^1.1.0",
+    "vuepress-plugin-demo-container": "^0.2.0",
+    "xlsx": "0.13.5",
+    "xlsx-style": "^0.8.13",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1"
   }
 }
