--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "element-ui": "^2.15.6",
     "vue2-elementui-extend": "^1.1.0",
     "vuepress-plugin-demo-container": "^0.2.0",
-    "xlsx": "0.13.5",
+    "xlsx": "^0.13.5",
     "xlsx-style": "^0.8.13",
-    "sass": "^1.32.5",
-    "sass-loader": "^10.1.1"
+    "sass": "1.32.5",
+    "sass-loader": "10.1.1",
+    "vue-papa-parse": "3.1.0"
   }
 }
