--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "GPL-3.0",
   "author": "zhongzhiguo/a513476726@qq.com",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "devDependencies": {
     "@snippetors/vuepress-plugin-code-copy": "^1.1.3",
@@ -17,12 +17,9 @@
   },
   "dependencies": {
     "element-ui": "^2.15.6",
-    "vue2-elementui-extend": "^1.1.0",
+    "vue2-elementui-extend": "^1.1.4",
     "vuepress-plugin-demo-container": "^0.2.0",
-    "xlsx": "^0.13.5",
-    "xlsx-style": "^0.8.13",
     "sass": "1.32.5",
-    "sass-loader": "10.1.1",
-    "vue-papa-parse": "3.1.0"
+    "sass-loader": "10.1.1"
   }
 }
