--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "zhongzhiguo/a513476726@qq.com",
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "docs:build": "vuepress build docs"
   },
   "devDependencies": {
     "@snippetors/vuepress-plugin-code-copy": "^1.1.3",
