--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0",
   "author": "zhongzhiguo/a513476726@qq.com",
   "scripts": {
-    "dev": "vuepress dev docs",
+    "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "element-ui": "^2.15.6",
-    "vue2-elementui-extend": "^1.1.4",
+    "vue2-elementui-extend": "^1.1.5",
     "vuepress-plugin-demo-container": "^0.2.0",
     "sass": "1.32.5",
     "sass-loader": "10.1.1"
