--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue2-elementui-extend": "1.1.5",
     "vuepress-plugin-demo-container": "0.2.0",
     "sass": "1.32.5",
-    "sass-loader": "10.1.1"
+    "sass-loader": "10.1.1",
+    "vue-papa-parse": "3.1.0"
   }
 }
