--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue2-elementui-extend": "1.1.5"
   },
   "volta": {
-    "node": "16.20.2"
+    "node": "18.19.1",
+    "npm": "10.2.4"
   }
 }
